src/test/ui/traits/alias/cross-crate.stderr
error[E0277]: `Rc<u32>` cannot be sent between threads safely
  --> $DIR/cross-crate.rs:14:17
   |
LL | fn use_alias<T: SendSync>() {}
   |                 -------- required by this bound in `use_alias`
...
LL |     use_alias::<Rc<u32>>();
   |                 ^^^^^^^ `Rc<u32>` cannot be sent between threads safely
   |
   = help: the trait `Send` is not implemented for `Rc<u32>`

error[E0277]: `Rc<u32>` cannot be shared between threads safely
  --> $DIR/cross-crate.rs:14:17
   |
LL | fn use_alias<T: SendSync>() {}
   |                 -------- required by this bound in `use_alias`
...
LL |     use_alias::<Rc<u32>>();
   |                 ^^^^^^^ `Rc<u32>` cannot be shared between threads safely
   |
   = help: the trait `Sync` is not implemented for `Rc<u32>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
